# moof

./: README.md  commands.txt  flow.md
aerostack2_wiki/: Contributing Guidelines  aerostack2aerostack2  DeepWiki.md  Overview.md  aerial_platform_base.md  aerostack2.md  as2_core & messages.md  behaviour_system.md  ci_cd_pipelines.md  core_system.md  development.md  drone_sensor_models.md  gazebo_integration.md  gazebo_platform.md  getting_started.md  keyboard_teleoperation.md  mission_interpreter.md  motion_control.md  path_planning.md  perception_behaviours.md  platform_implementaion.md  python_api.md  simulation.md  state_estimation.md  trajectory_generation.md  user_interfaces.md
ardupilot_survey_mission/: CMakeLists.txt  commands.txt  package.xml
ardupilot_survey_mission/config/: mavros_config.yaml  survey_params.yaml
ardupilot_survey_mission/launch/: basic_mavros.launch.py  mavros_sitl.launch.py  minimal_mavros.launch.py  sitl_survey_mission.launch.py  test_minimal_mavros.launch.py  ultra_minimal_mavros.launch.py
ardupilot_survey_mission/mavros_wiki/: ArduPilot Configuration  mavlinkmavros  DeepWiki.md  Command Line Tools  mavlinkmavros  DeepWiki.md  Companion Computer Integration  mavlinkmavros  DeepWiki.md  Extra Plugins  mavlinkmavros  DeepWiki.md  FTP and File Management  mavlinkmavros  DeepWiki.md  Mission Planning Tools  mavlinkmavros  DeepWiki.md  PX4 Configuration  mavlinkmavros  DeepWiki.md  Package Structure  mavlinkmavros  DeepWiki.md  Position and Orientation Plugins  mavlinkmavros  DeepWiki.md  Sensor Plugins  mavlinkmavros  DeepWiki.md  Setpoint Plugins  mavlinkmavros  DeepWiki.md  System Status Plugin  mavlinkmavros  DeepWiki.md  Vision and Motion Capture Plugins  mavlinkmavros  DeepWiki.md
ardupilot_survey_mission/scripts/: simple_takeoff_land.py  square_survey_mission.py  survey_mission.py  test_mavros.py
ardupilot_survey_mission/src/: survey_mission_node.cpp
as2_ardu_msn/: README.md  README_basic_mission.md  README_takeoff.md  TAKEOFF_TROUBLESHOOTING.md  TF_FIXES_README.md  TF_SOLUTIONS_README.md  TF_TIMING_FIXES.md  arm_disarm_aerostack2.py  basic_survey_mission.py  commands.txt  fix_stale_mission.sh  launch_sitl_swarm.sh  mavros_arm_test.py  mission.html  package.xml  restart_clean.sh  setup.cfg  setup.py  survey_mission.py  test_tf_fixes.sh
as2_ardu_msn/as2_ardu_msn/: basic_survey_mission.py  basic_survey_mission_backup.py  basic_survey_mission_original.py  multi_drone_survey_mission.py  multi_drone_survey_mission.py.backup  takeoff_mission.py
as2_ardu_msn/config/: behavior_config.yaml  config.yaml  control_modes.yaml  mavros_config.yaml  mavros_timesync.yaml  mavros_timing_fix.yaml  mission_config.yaml  motion_behaviors.yaml  motion_controller.yaml  motion_controller_config.yaml  multi_drone_config.yaml  pid_speed_controller.yaml  platform_config.yaml  platform_params.yaml  state_estimator.yaml  takeoff_config.yaml
as2_ardu_msn/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
as2_ardu_msn/install/as2_ardu_msn/share/as2_ardu_msn/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
as2_ardu_msn/launch/: aerostack2_nodes.launch.py  aerostack2_with_apm_launch.py  ardupilot_sitl.launch.py  basic_aerostack2.launch.py  basic_aerostack2_improved.launch.py  full_mission.launch.py  multi_drone_aerostack2.launch.py  multi_drone_aerostack2.launch.py.backup  takeoff_aerostack2.launch.py  test_mavros.launch.py  test_mavros_only.launch.py
as2_ardu_msn/log/: latest_build
as2_ardu_msn/mission_files/: 1203-1bf326b990ec37fd.js  1336-52c11f20b3d926e4.js  1761-2d931d8996aedc78.js  1910-472f2bb4f4db5544.js  2198-e43e1ff8528c9da6.js  2495-406d7229600b8f76.js  28-676b145cdd6dfba6.js  3105-d0dc1ca71cf99562.js  4647-2c591d0c485f67fb.js  5194-735fccf86756dc5a.js  5711-75684afd8998bda4.js  5777-c827efc68546f2f4.js  593-2867deeb7179e2ca.js  6903-dde5cf8ced1139c2.js  7054-4422313a842626d7.js  7143-45e2a9c6db657d8d.js  7354-d571f65763aa8733.js  7383-a4f1ce48347aeef4.js  7561-f443b18cbf92b079.js  8183-fa548d2e541c9a80.js  8185-8194bedbf82ea8dc.js  8194-15c3358e9bc9a174.js  8354-ea699d45eaa19e8b.js  8518-fc093888694f3ef6.js  8711-e7ec04adbf8f7da8.js  9109-8a56acfe53375946.js  9486-c1da981b19487cc3.js  953-5dc79255d9fec556.js  a.html  bc02458825b4bc1b.css  isolated-segment.html  layout-b5acb3195cca81e1.js  layout-b72a974e8a299910.js  layout-fa6f8f2eb71b6dbe.js  loading-a441c914670b5821.js  lupk8zyo  new.html  not-found-a9d8eb70e8623133.js  page-d57829b7398f080d.js  webpack-ff3f45a00c3bf778.js
as2_ardu_msn/mission_files/a_data/: main.js
as2_ardu_msn/mission_files/isolated-segment_data/: 468742119653388.js  a.html
as2_ardu_msn/mission_files/new_data/: frame.619a3386.js
as2_ardu_msn/scripts/: clear_mission.py  simple_mission.py  start_ardupilot_sitl.sh  test_ardupilot_mission.py  tf_diagnostic.py  tf_diagnostics.py
flight_abstraction/: package.xml  setup.cfg  setup.py
mavros_wiki/: Architecture and Communication Flow  mavlinkmavros  DeepWiki.md  Configuration  mavlinkmavros  DeepWiki.md  Connection System  mavlinkmavros  DeepWiki.md  (+8 more)
task_execution/: PHASE4_MONITORS_COMPLETE.md  PHASE5_COMPLETE.md  README.md  TESTING.md  package.xml  setup.py
task_execution/config/: mavros_config.yaml  tee_config.yaml
task_execution/launch/: complete_system.launch.py  multi_drone_squadron.launch.py  multi_drone_system.launch.py  tee.launch.py  tee_with_fal.launch.py  test_fal_tee_only.launch.py  test_system.launch.py
task_execution/scripts/: monitor_tee_status.py  test_mission_execution.py  verify_installation.py
task_execution/task_execution/: monitor_demo.py  performance_monitor.py  tee_node.py
task_execution/task_execution/core/: __init__.py  state_machine.py  task_queue.py  task_validator.py
task_execution/task_execution/executors/: __init__.py  base_executor.py  follow_executor.py  orbit_executor.py  search_executor.py  survey_executor.py  waypoint_executor.py
task_execution/task_execution/monitors/: __init__.py  battery_monitor.py  gps_monitor.py  health_monitor.py  progress_monitor.py
(+100 files in other folders)
