<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_ardu_msn</name>
  <version>0.0.0</version>
  <description>ArduPilot Survey Mission for Aerostack2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>as2_python_api</exec_depend>
  <exec_depend>as2_msgs</exec_depend>
  <exec_depend>as2_core</exec_depend>
  <exec_depend>as2_platform_mavlink</exec_depend>
  <exec_depend>as2_state_estimator</exec_depend>
  <exec_depend>as2_motion_controller</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>